💄(frontend) fix panel layout overflow issue
Currently panels does not permit their children to overflow this is problematic
because of tooltip components. As a workaround, we patch panels elements to
reset overflow value.

--- a/src/frontend/src/features/layouts/components/thread-panel/_index.scss
+++ b/src/frontend/src/features/layouts/components/thread-panel/_index.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     max-height: 100%;
+
+    .thread-panel__threads_list {
     overflow-y: auto;
+    }
 
     &--loading,
     &--empty {
